SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    20 Apr 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140420
Tag Summary: Cleaned up whitespace in pop2.buildnml.csh (proper indentation to
             make script easier to read)

Files Modified:
M       bld/pop2.buildnml.csh
===============================================================================
Tag Creator: mlevy
Developers:  mlevy, thoar
Tag Date:    14 Mar 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140314
Tag Summary: There was some un-necessary code for handling rpointer files in
             multi-instance cases. This tag also cleans up how the variable
             inst_string is determined (single print statement instead of
             several if statements to prepend 0s)

Files Modified:
M       bld/pop2.buildnml.csh
===============================================================================
Tag Creator: mlevy
Developers:  gokhan, ytseng
Tag Date:    1 Mar 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140301
Tag Summary: Units attribute of potential vorticity was incorrect in history
             files

Files Modified:
M       source/advection.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    28 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140228
Tag Summary: Despite fix in 20140227a tag, P_iron remin is still not always
             computed correctly (there was a bug in my bug fix)

Files Modified:
M       source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    27 Feb 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227e
Tag Summary: New ecosys module wasn't broadcasting everything after reading
             namelist (also wasn't writing everything to screen)

Files Modified: