@@ -2,6 +2,15 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  njn01, mlevy
+Tag Date:    20 Apr 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140420a
+Tag Summary: Update restart.F90 to allow POP to right restart mid-day
+
+Files Modified:
+M       source/restart.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  mlevy
 Tag Date:    20 Apr 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140420
